RESOLVED FIXED106311
REGRESSION(r139036): 'WebCore::DateTimeSymbolicFieldElement::isInRange' hides overloaded virtual function
https://bugs.webkit.org/show_bug.cgi?id=106311
Summary REGRESSION(r139036): 'WebCore::DateTimeSymbolicFieldElement::isInRange' hides...
jochen
Reported 2013-01-08 00:29:38 PST
Source/WebCore/html/shadow/DateTimeSymbolicFieldElement.h:52:10: error: 'WebCore::DateTimeSymbolicFieldElement::isInRange' hides overloaded virtual function [-Werror,-Woverloaded-virtual] bool isInRange(int index) const { return index >= m_minimumIndex && index <= m_maximumIndex; } ^ ../../Source/WebCore/dom/Element.h:416:18: note: hidden overloaded virtual function 'WebCore::Element::isInRange' declared here virtual bool isInRange() const { return false; }
Attachments
Patch (2.81 KB, patch)
2013-01-08 00:39 PST, jochen
no flags
jochen
Comment 1 2013-01-08 00:39:54 PST
jochen
Comment 2 2013-01-08 00:41:29 PST
Comment on attachment 181665 [details] Patch Clearing flags on attachment: 181665 Committed r139043: <http://trac.webkit.org/changeset/139043>
jochen
Comment 3 2013-01-08 00:41:34 PST
All reviewed patches have been landed. Closing bug.
Kent Tamura
Comment 4 2013-01-08 00:41:46 PST
Comment on attachment 181665 [details] Patch LGTM
Note You need to log in before you can comment on or make changes to this bug.